<resources>
    <string name="app_name">Furniture Shop</string>
    <string name="rightAddress">The Right Address\nFor Shopping\nAnyday</string>
    <string name="quality">"It is now very easy to reach the\nbest quality among the\nproducts on the internet! "</string>
    <string name="appName">Kleine.</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="start">Start</string>
    <string name="let_s_login">Let\'s login</string>
    <string name="let_s_register">Let\'s register</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="don_t_have_an_account_yet_register_here">Don\'t have an account yet? Register here</string>
    <string name="forgot_password_click_here">Forgot password? Click here</string>
    <string name="reset_password">Reset Password</string>
    <string name="we_will_send_you_a_link_to_reset_your_password">We will send you a link to reset your password</string>
    <string name="cancel">Cancel</string>
    <string name="send">Sendl</string>
    <string name="search_now">Search Now</string>
    <string name="best_deals">Best deals</string>
    <string name="best_products">Best products</string>
</resources>
